Installed gunicorn and made a test change to the blog entry

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ itsdangerous = "*"
 flask-mail = "*"
 python-language-server = "*"
 flask-wtf = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.6"
