Pipfile updated for any Python and /etc/projects/ added to config.py

--- a/Pipfile
+++ b/Pipfile
@@ -10,12 +10,10 @@ flask = "*"
 flask-sqlalchemy = "*"
 flask-bcrypt = "*"
 flask-login = "*"
-pillow = "*"
 itsdangerous = "*"
 flask-mail = "*"
 python-language-server = "*"
 flask-wtf = "*"
 gunicorn = "*"
-
-[requires]
-python_version = "3.6"
+cffi = "*"
+pillow = "*"
